# Tello_Drone_Controller

./: CMakeLists.txt  README.md  main.cpp  tellowindow.cpp  tellowindow.h  tellowindow.ui
include/: CommandController.h  Constants.h  Drone.h  DroneWindow.h  StatusController.h  StatusParams.h  TelloDriver.h  VideoController.h  driver.h  status.h  tello_driver.h  video.h
src/: CommandController.cpp  Drone.cpp  DroneWindow.cpp  StatusController.cpp  TelloDriver.cpp  VideoController.cpp  driver.cpp  status.cpp  tello_driver.cpp  video.cpp
